--- a/content/en/afli/_index.html
+++ b/content/en/afli/_index.html
@@ -1,5 +1,5 @@
 ---
-title: Afli í Húnaflóa
+title:
 output:
   html_document:
   toc: false
@@ -11,8 +11,8 @@ css: style.css
   <link rel="stylesheet" href="style.css" type="text/css" />
 
 
-<div id="skipting-afla-eftir-veiðarfærum" class="section level1">
-<h1>Skipting afla eftir veiðarfærum</h1>
+<div id="skipting-afla-í-húnaflóa-eftir-veiðarfærum" class="section level1">
+<h1>Skipting afla í Húnaflóa eftir veiðarfærum</h1>
 <hr />
 <div id="section" class="section level2">
 <h2>2020</h2>
@@ -21,8 +21,7 @@ css: style.css
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
-<p><link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
-<link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet"></p>
+<p><link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css"></p>
 <body>
 <div id="chart">
 
@@ -269,11 +268,7 @@ function getTableData(table) {
 
 function createHighcharts(data) {
   Highcharts.setOptions({
-    chart: {
-        style: {
-            fontFamily: "'Courier Prime', monospace;"
-        }
-    },
+   
     lang: {
       thousandsSep: ","
     }
