--- a/public/en/index.html
+++ b/public/en/index.html
@@ -2442,7 +2442,7 @@
         <hr class="hr-fade sidebar-hr" />
         
         <section class="sidebar-recent">
-            <a href="/en/afli/" class="sidebar-recent__title p2">Afli í Húnaflóa</a>
+            <a href="/en/afli/" class="sidebar-recent__title p2"></a>
             <ul class="sidebar-recent__ul">
                 
             </ul>
